fix: weeb service
